# vxquant

./: .gitignore  LICENSE  Makefile  Pipfile  README.en.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/vxutils/: convertors.md
examples/demo/: README.md
examples/demo/etc/: config.json
examples/demo/mod/: demo1.py
src/vxquant/: exceptions.py
src/vxquant/agent/: __main__.py  gmagent.py  gmsimagent.py
src/vxquant/agent/mod/: monitor.py
src/vxquant/mdapi/: __init__.py  base.py  instruments.py
src/vxquant/mdapi/features/: baostock.py
src/vxquant/mdapi/hq/: __init__.py  gm.py  tdx.py  tencent.py
src/vxquant/model/: contants.py  exchange.py  nomalize.py  portfolio.py  preset.py
src/vxquant/model/tools/: __init__.py  gmData.py  tdxData.py
src/vxquant/tdapi/: base.py  gm.py  gmtrade.py  sim.py
src/vxsched/: __init__.py  __main__.py  context.py  core.py  event.py  handlers.py  rpc.py
src/vxsched/pubsubs/: __init__.py  base.py  ftp.py  zeromq.py
src/vxsched/scripts/: __init__.py  broker.py  worker.py
src/vxsched/triggers/: __init__.py  daily.py  interval.py  once.py  weekly.py
src/vxutils/: __init__.py  cache.py  convertors.py  dataclass.py  debug.py  decorators.py  exceptions.py  log.py  net.py  time.py  toolbox.py  zmqsocket.py
src/vxutils/database/: __init__.py  mongodb.py  sqlite.py
tests/: test_convertors.py  test_model.py  test_portfolio.py  test_scheduler.py  test_utils.py
vxquant/: __init__.py  backtest.py  main.py  runbacktest.py  zmqserver.py
vxquant/model/: broker.py  contants.py  portfolio.py  preset.py
vxquant/model/tools/: __init__.py  gmData.py  tdxData.py
vxquant/scheduler/: __init__.py  context.py  engine.py  event.py
vxquant/scheduler/channels/: __init__.py  ftpchannel.py  zmqchannel.py
vxquant/scheduler/triggers/: __init__.py  daily.py  interval.py  once.py  weekly.py
vxquant/utils/: __init__.py  cache.py  convertors.py  dataclass.py  decorators.py  log.py  net.py  timer.py  toolbox.py  zmq.py
vxquant/utils/db/: __init__.py  monogo.py  sqlite.py
