[metadata]
name = vxquant
version = attr: vxquant.VERSION
author = vex1023
author_email = vex1023@qq.com
description = 基于事件驱动的量化交易基础框架
long_description = file: README.md, LICENSE
keywords = quant, tools,
url = https://gitee.com/vxquant/vxquant
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy


[options]
python_requires = >=3.7.0
zip_safe = False
packages=find:
include_package_data = True
install_requires = 
    requests
    six
    pytz


[options.package_data]
* = *.txt, *.rst, *.md, *.json

[options.entry_points]
console_scripts =
    executable-name = zmqserver

[options.extras_require]
dev = 
    pylint
    flake8
    twine
    pytest

rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    vxquant.tests*
    tests*
    *.tests
    *.tests.*
    tests.*

